fix bug for the method "options" and added the check Array.isArray

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "webserwer",
   "version": "0.1.0",
-  "description": "HTTP, TCP server",
+  "description": "Work with  the HTTP and TCP server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alexsandr Turkovskiy",
+  "author": "Turkovsky Olexsandr",
   "license": "ISC"
 }
