--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
-tmp
-tcp
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# dif files
+bundle.css
+bundle.js
+bundle.ls
+
+
+# Build artifacts
+dist/
+build/
+.next/ # For Next.js projects
+out/ # For Next.js projects
+.nuxt/ # For Nuxt.js projects
+.output/ # For Nuxt.js projects
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor and OS specific files
+.DS_Store
+Thumbs.db
+.vscode/ # VS Code specific settings (optional, depending on team preference)
+*.sublime-project
+*.sublime-workspace
+
+# Test and coverage reports
+coverage/
+.nyc_output/
+
+# IDE specific files (e.g., WebStorm)
+.idea/
+
+# Other temporary files
+tmp/
+temp/
+tcp/
 
